# goit-python-web-hw8-ii

./: README.md  pyproject.toml
db/: create_contact.py  create_contacts.py  models.py  update.py
rabbit_mq/: consumer.py  producer.py
utilities/: email_handler.py
