[tool.poetry]
name = "goit-python-web-hw8-ii"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw8_ii"}]

[tool.poetry.dependencies]
python = "^3.11"
certifi = "^2023.7.22"
mongoengine = "^0.27.0"
faker = "^19.3.0"
pika = "^1.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
